# cgn_pytorch

./: CMakeLists.txt  Dockerfile  README.md  build_container.sh  create_env.bash  create_env.zsh  eval.py  grasp_server.py  package.xml  run_container.py  run_container.sh
src/: grasp_server.py
srv/: GetGrasps.srv
